# iotaledger-identity.rs

./: CHANGELOG.md  Cargo.toml
bindings/grpc/: Cargo.toml
bindings/wasm/identity_wasm/: CHANGELOG.md  Cargo.toml  package-lock.json  package.json
bindings/wasm/identity_wasm/examples/: README.md
bindings/wasm/identity_wasm/examples/src/: main.ts  util.ts
bindings/wasm/identity_wasm/examples/src/1_advanced/: 10_sd_jwt_vc.ts  6_sd_jwt_v2.ts
bindings/wasm/identity_wasm/src/: error.rs
bindings/wasm/identity_wasm/src/credential/: jwt.rs
bindings/wasm/identity_wasm/src/credential/jwt_credential_validation/: kb_validation_options.rs  sd_jwt_validator.rs
bindings/wasm/identity_wasm/src/iota/: iota_did.rs
bindings/wasm/identity_wasm/src/rebased/: wasm_identity_client.rs  wasm_identity_client_read_only.rs
bindings/wasm/identity_wasm/src/sd_jwt/: builder.rs  disclosure.rs  hasher.rs  kb_jwt.rs  mod.rs  signer.rs  token.rs
bindings/wasm/identity_wasm/src/sd_jwt_vc/: builder.rs  claims.rs  mod.rs  presentation.rs  token.rs
bindings/wasm/identity_wasm/src/sd_jwt_vc/metadata/: claim.rs
bindings/wasm/identity_wasm/src/storage/: wasm_storage_signer.rs
examples/: Cargo.toml  README.md
examples/1_advanced/: 13_iota_keytool_integration.rs  7_sd_jwt_v2.rs
examples/utils/: utils.rs
identity_core/: Cargo.toml
identity_credential/: Cargo.toml
identity_credential/src/: lib.rs
identity_credential/src/credential/: credential.rs
identity_credential/src/sd_jwt_vc/: builder.rs  claims.rs  error.rs  presentation.rs  status.rs  token.rs
identity_credential/src/sd_jwt_vc/metadata/: claim.rs  display.rs  issuer.rs  vc_type.rs
identity_credential/src/sd_jwt_vc/tests/: mod.rs  presentation.rs  validation.rs
identity_credential/src/validator/sd_jwt/: error.rs  kb_validation_options.rs  validator.rs
identity_did/: Cargo.toml
identity_document/: Cargo.toml
identity_ecdsa_verifier/: Cargo.toml
identity_eddsa_verifier/: Cargo.toml
identity_iota/: Cargo.toml
identity_iota/src/: lib.rs
identity_iota_core/: Cargo.toml
identity_iota_core/src/rebased/client/: full_client.rs
identity_iota_core/src/rebased/migration/: controller_token.rs  identity.rs
identity_iota_core/src/rebased/proposals/: mod.rs
identity_iota_core/tests/e2e/: client.rs  common.rs
identity_jose/: Cargo.toml
identity_pqc_verifier/: Cargo.toml
identity_resolver/: Cargo.toml
identity_storage/: Cargo.toml
identity_storage/src/key_storage/: memstore.rs
identity_storage/src/storage/: storage_signer.rs
identity_storage/src/storage/tests/: kb_jwt.rs
identity_stronghold/: Cargo.toml
identity_verification/: Cargo.toml
