[package]
name = "identity_pqc_verifier"
version = "1.9.0-beta.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["iota", "identity", "jose", "jwk", "jws"]
license.workspace = true
readme = "./README.md"
repository.workspace = true

description = "JWS PQC signature verification for IOTA Identity"

[dependencies]
identity_jose = { version = "=1.9.0-beta.1", path = "../identity_jose", default-features = true }
oqs.workspace = true
